# uis-aerospace-cubesat-flight-computer

./: .clang-format  .gitmodules  README.md  cubesat.dtbo  cubesat.dts  cubesat.service
src/: CMakeLists.txt  cubesat.cpp  datalogger.cpp  datalogger.h  i2c-linux.cpp  i2c.h  linux-spi.h  telemetry.cpp  telemetry.h
src/logging/: CMakeLists.txt  log_backend.cpp  log_backend.h  log_common.h  logger.cpp  logger.h
src/sensors/: CMakeLists.txt  accelerometer.cpp  accelerometer.h  barometer.cpp  barometer.h  gnss.cpp  gnss.h  gyroscope.cpp  gyroscope.h  thermometer.cpp  thermometer.h
